--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Url Decoder that I usually need ",
   "main": "index.js",
   "devDependencies": {
+    "browserify": "^14.4.0",
     "gulp": "^3.8.11",
-    "gulp-browserify": "^0.5.1",
+    "gulp-clean-css": "^3.7.0",
     "gulp-livereload": "^3.8.0",
-    "gulp-sass": "^1.3.3",
-    "qs": "^2.4.1"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "qs": "^6.5.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "start": "gulp",
