--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Url Decoder that I usually need ",
   "main": "index.js",
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
     "browserify": "^14.4.0",
     "gulp": "^3.8.11",
     "gulp-clean-css": "^3.7.0",
     "gulp-livereload": "^3.8.0",
-    "gulp-sass": "^3.1.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "precss": "^2.0.0",
     "qs": "^6.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
